changed the proloader and added aos and added once in it and corrected the overflow problem in project

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -293,6 +293,11 @@
     left: 0;
 }
 
+.ellipse_theme_pos_left_top {
+    top: -215px;
+    left: 0;
+}
+
 .ellipse_theme_pos_right {
     bottom: 0;
     right: 0;
@@ -459,6 +464,11 @@
     background-position: center;
     z-index: 100;
     transition: all 300ms linear;
+}
+
+.loading_img {
+    width: 300px;
+    height: 200px;
 }
 
 .-top_100 {
